--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
 
         link(rel="stylesheet" href="styles.css")
 
-        title WSTester
+        title wstester
 
     body
         h3 Server
