--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,20 @@ body {
   font-family: monospace;
 }
 
+#ws-status span {
+  padding: 3px;
+}
+
+.bg-green {
+  background-color: green;
+  color: #FFF;
+}
+
+.bg-red {
+  background-color: red;
+  color: #FFF;
+}
+
 .green {
   color: green;
 }
