--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 form {
   display: inline-block; }
 
-input, button {
+input, button, #ws-status span {
   margin: 0 5px; }
 
 /*# sourceMappingURL=styles.css.map */
