--- a/css/app.css
+++ b/css/app.css
@@ -2,8 +2,17 @@ body {
   font-family: monospace;
 }
 
-#ws-status span {
-  padding: 3px;
+.flex {
+  align-items: center;
+  display: flex;
+}
+
+.flex > *:not(:last-child) {
+  margin-right: .5em;
+}
+
+a {
+  text-decoration: none;
 }
 
 .bg-green {
@@ -24,14 +33,18 @@ body {
   color: red;
 }
 
+.gray {
+  color: gray;
+}
+
 .bold {
   font-weight: bold;
 }
 
-form {
-  display: inline-block;
+#ws-status span {
+  padding: 3px;
 }
 
-input, button, #ws-status span {
-  margin: 0 5px;
+#log {
+  word-break: break-all;
 }
